name: HSGames
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: Games in Haskell
data-files: lacuna.ttf
data-dir: data
extra-source-files: README.md Lacuna-Info.doc
 
executable HSGames
    build-depends: QuickCheck -any, SDL -any, SDL-ttf -any, base -any,
                   mtl -any, netwire -any, random -any, stm -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: HSGames.Breakout HSGames.Snake.Types
                   HSGames.Snake.Logic HSGames.Monad HSGames.Ticker HSGames.Snake
                   HSGames.Snake.Direction
 